# SchemaVIZ

./: .gitignore  .gitmodules
backend/: Makefile  README.md  create_infrastructure_data.py  pyproject.toml
backend/django_schema_viz/: admin.py  api_choices.py  apps.py  authentication.py  checks.py  conf.py  drawing_file.py  drawing_validation.py  drf.py  i18n.py  mixins.py  models.py  schema_compat.py  serializers.py  spectacular_hooks.py  template_uniqueness.py  urls.py  views.py
backend/django_schema_viz/export/: __init__.py  _lexical_utils.py  drawio.py  shape_registry.py  svg.py
backend/django_schema_viz/fixtures/: dev_oauth_app.json
backend/django_schema_viz/migrations/: 0001_initial.py  0002_ai_config_fields.py  0003_group_template.py  0004_remove_environment_sync_run.py  0005_remove_generationtemplate_uniq_generation_template_export_name_owner_and_more.py
backend/django_schema_viz/query_lab/: __init__.py  serializers.py  views.py
backend/infrastructure/: admin.py  apps.py  models.py  schema.py  tests.py
backend/scripts/: release_backend.py
backend/stress_chain_delta/: admin.py  apps.py  models.py
backend/stress_chain_epsilon/: admin.py  apps.py  models.py
backend/stress_chain_zeta/: admin.py  apps.py  models.py
backend/stress_core/: admin.py  apps.py  models.py  tests.py
backend/stress_dense_alpha/: admin.py  apps.py  models.py
backend/stress_dense_beta/: admin.py  apps.py  models.py
backend/stress_dense_gamma/: admin.py  apps.py  models.py
backend/test_project/: asgi.py  middleware.py  schema.py  settings.py  urls.py  wsgi.py
(+309 files in other folders)
