[project]
name = "django-schema-viz"
dynamic = ["version"]
description = "Reusable Django app for schema-aware diagrams, templates, and exports"
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Kai Sommer" },
]
keywords = ["django", "diagram", "schema", "visualization", "reactflow"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Django",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "django>=4.2",
    "django-qlab>=0.3.5",
    "djangorestframework>=3.15.2",
    "djangorestframework-camel-case>=1.4.2",
    "djangorestframework-dataclasses>=1.4.0",
    "pydantic>=2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "django_schema_viz/__about__.py"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["django_schema_viz"]

[tool.uv]
dev-dependencies = [
    "cryptography>=45.0",
    "django-cors-headers>=4.0",
    "django-debug-toolbar>=6.1.0",
    "django-oauth-toolkit>=2.4",
    "drf-spectacular>=0.29.0",
    "faker>=24.0.0",
    "ipython",
]
